Mad some updates

--- a/index.html
+++ b/index.html
@@ -8,8 +8,9 @@
   <meta name="description" content="HTML Final">
   <meta name="author" content="Skylar Shapiro-Frost">
 
-  <link rel="stylesheet" href="css/style.css">
   <link rel="stylesheet" href="css/sticky_footer.css">
+  <link rel="stylesheet" href="css/style.css">
+
 
 </head>
   <body>
@@ -27,6 +28,15 @@
           <li><a href="proj.html">Projects</a></li>
           <li><a href="about.html">About</a></li>
       </nav>
+      <div>
+      <section class="info_box">
+        <figure class="center">
+          <img class="img_pfp"src="pictures/sky_1.jpg" alt="Picture of Skylar">
+          <figcaption>Skylar Shapiro-Frost</figcaption>
+        </figure>
+        <p>test</p>
+      </section>
+      </div>
   </div>
   <footer id="foot" class="footer">
       <p>Skylar Shapiro-Frost 2020&copy;</p>
