Added to the work page and made some minor corrections.

--- a/index.html
+++ b/index.html
@@ -27,14 +27,18 @@
           <li><a href="education.html">Education</a></li>
           <li><a href="proj.html">Projects</a></li>
           <li><a href="about.html">About</a></li>
+          </ul>
       </nav>
       <div>
       <section class="info_box">
-        <figure class="center">
-          <img class="img_pfp"src="pictures/sky_1.jpg" alt="Picture of Skylar">
-          <figcaption>Skylar Shapiro-Frost</figcaption>
-        </figure>
-        <p>test</p>
+        <article>
+          <h3 class="center">Welcome To My Site</h3>
+          <figure class="center">
+            <img class="img_pfp"src="pictures/sky_1.jpg" alt="Picture of Skylar">
+            <figcaption>Skylar Shapiro-Frost</figcaption>
+          </figure>
+          <p class="padding ">My name is Skylar, I am 24 years old and located in Eugene OR. I am looking for work  as a software developer.  [mission statement here].</p>
+        </article>
       </section>
       </div>
   </div>
