--- a/work.html
+++ b/work.html
@@ -26,7 +26,35 @@
           <li><a href="education.html">Education</a></li>
           <li><a href="proj.html">Projects</a></li>
           <li><a href="about.html">About</a></li>
+        </ul>
       </nav>
+      <section class="info_box">
+          <article>
+            <h3 class="center"> Jobs I have held </h3>
+            <table class="table">
+              <tr>
+                <th>Company</th>
+                <th>Possition</th>
+              </tr>
+              <tr>
+                <td>NewTek</td>
+                <td>Technical Support rep</td>
+              </tr>
+              <tr>
+                <td>Godaddy</td>
+                <td>Productivity Support</td>
+              </tr>
+              <tr>
+                <td>Endurance</td>
+                <td>Web Hosting Support rep Tier 1 / 2</td>
+              </tr>
+              <tr>
+                <td>AT&T</td>
+                <td>Technical Support rep</td>
+              </tr>
+            </table>
+          <article>
+      </section>
   </div>
   <footer id="foot" class="footer">
       <p>Skylar Shapiro-Frost 2020&copy;</p>
