Added the copy for jobs and addedsome css in the head to meet the req.

--- a/work.html
+++ b/work.html
@@ -10,6 +10,19 @@
 
   <link rel="stylesheet" href="css/style.css">
   <link rel="stylesheet" href="css/sticky_footer.css">
+  <style>
+  .list
+  {
+    list-style: none;
+    text-align: left;
+  }
+
+  .list li
+  {
+    padding: 10px;
+  }
+
+  </style>
 
 </head>
   <body>
@@ -30,7 +43,7 @@
       </nav>
       <section class="info_box">
           <article>
-            <h3 class="center"> Jobs I have held </h3>
+            <h2 class="center"> Jobs I have held </h2>
             <table class="table">
               <tr>
                 <th>Company</th>
@@ -54,6 +67,45 @@
               </tr>
             </table>
           <article>
+          <article class="center">
+            <h2>More Info</h2>
+
+            <h3>NewTek</h3>
+            <ul class="list">
+                <li>Provided technical support for Linux and Windows based shared hosting platforms as well as support for dedicated and virtual private servers</li>
+                <li>Provided support for shared and dedicated email systems, as well as supporting basic email client configuration</li>
+                <li>Communicate with customers via phone, chat, and email ticketing system to resolve various issues</li>
+                <li>Completing tasks within an acceptable time frame to meet customer service standers</li>
+                <li>Preform server administration tasks on shared and dedicated servers, and create clear and well documented internal tickets when issue required escalation</li>
+            </ul>
+
+            <h3>GoDaddy</h3>
+            <ul class="list">
+                <li>Technical support for Office 365 as well as in house email systems</li>
+                <li>Consult with customers regarding their short and long term online goals, and provide product solutions to meet those goals</li>
+                <li>Utilize tools, such as Zoom remote support, to assist customers with Outlook troubleshooting</li>
+                <li>Attend trainings and develop product knowledge to be able to assist customers with products provided by GoDaddy, while specializing  in email </li>
+                <li>Adhere to metrics for sales, availability, and customer satisfaction</li>
+            </ul>
+
+            <h3>Endurance</h3>
+            <ul class="list">
+                <li>Technical support for shared hosting environment as well as VPS and dedicated support</li>
+                <li>Consulting with customers to help them grow their business online by advising customers on products we offer and up-selling services to best suit customer's needs</li>
+                <li>Worked in an email support team dedicated to configuring email clients as well as troubleshooting server side issue with sending and reviving email</li>
+                <li>Worked on the support team for Wordpress and advanced hosting, dedicated to supporting Wordpress applications and providing support for customers with VPS and dedicated servers.</li>
+                <li>Worked in a tier 2 position which entailed management of a team of advanced technical support agents overseeing the migration of customers content from an outdated platform to our updated hosting platform</li>
+            </ul>
+
+            <h3>AT&T</h3>
+            <ul class="list">
+                <li>Technical support for AT&T U-vers services including VoIP, Television, and internet services by support over the phone and dispatching technicians over a national system</li>
+                <li>Assist with billing inquires and account management, some times using a mirrored web service</li>
+                <li>Promoted to a leadership position and took on the responsibility that came with the position such as team management and resolving escalated issues</li>
+                <li>Helped improve agent performance with one on one sessions and general floor support as well as a chat program</li>
+                <li>Make daily reports to upper management on day to day operations, and completed assigned tasked in a timely manner</li>
+              </ul>
+          </article>
       </section>
   </div>
   <footer id="foot" class="footer">
