--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
       <section class="info_box">
         <figure class="center">
           <img class="img_pfp"src="pictures/sky_1.jpg" alt="Picture of Skylar">
-          <figcaption>Skylar Shapiro-Frost</figcaption>
+          <figcaption class="center">Skylar Shapiro-Frost</figcaption>
         </figure>
         <p>test</p>
       </section>
