Added more web copy and changed the pictures around. Now have 3 with the figure tag to meet the requierment

--- a/education.html
+++ b/education.html
@@ -28,6 +28,14 @@
           <li><a href="about.html">About</a></li>
           </ul>
       </nav>
+      <section class="info_box">
+        <article>
+          <h2 class="center">My Education</h2>
+          <figure class="center">
+            <img class="img_education"src="pictures/lcc.jpg" alt="Picture of Lane community college">
+            <figcaption>Lane Community College</figcaption>
+          </figure>
+        </article>
   </div>
 
   <footer id="foot" class="footer">
