--- a/index.html
+++ b/index.html
@@ -32,10 +32,9 @@
       <div>
       <section class="info_box">
         <article>
-          <h3 class="center">Welcome To My Site</h3>
+          <h2 class="center">Welcome To My Site</h2>
           <figure class="center">
-            <img class="img_pfp"src="pictures/sky_1.jpg" alt="Picture of Skylar">
-            <figcaption>Skylar Shapiro-Frost</figcaption>
+            <img class="img_def"src="pictures/code.jpg" alt="Computer code">
           </figure>
           <p class="padding ">My name is Skylar, I am 24 years old and located in Eugene OR. I am looking for work  as a software developer.  [mission statement here].</p>
         </article>
