--- a/work.html
+++ b/work.html
@@ -66,7 +66,7 @@
                 <td>Technical Support rep</td>
               </tr>
             </table>
-          <article>
+          </article>
           <article class="center">
             <h2>More Info</h2>
 
