Added content to all pages ans made updates. Still need to add some copy but most of the site is done

--- a/index.html
+++ b/index.html
@@ -36,7 +36,8 @@
           <figure class="center">
             <img class="img_def"src="pictures/code.jpg" alt="Computer code">
           </figure>
-          <p class="padding ">My name is Skylar, I am 24 years old and located in Eugene OR. I am looking for work  as a software developer.  [mission statement here].</p>
+          <p class="padding ">My name is Skylar, I am 24 years old and located in Eugene OR. I am looking for work  as a software developer.</p>
+          <p class="padding">Personal statment:"I am a friendly, loyal, and dedicated indivdual who has ambition to succed in any enviroment. I have extensive experince in customer service and tech support. I love to learn and am always up for a challenge. I get alog well with others, well working efficiently on my own."</p>
         </article>
       </section>
       </div>
