--- a/proj.html
+++ b/proj.html
@@ -28,6 +28,32 @@
           <li><a href="about.html">About</a></li>
           </ul>
       </nav>
+      <section class="info_box">
+        <article>
+          <h2 class="center">Projects</h2>
+          <h3 class="padding"><a href="https://github.com/skyfast/Lab_9" target="_blank">File Reading</a></h3>
+          <p class="padding">Place holding</p>
+          <h3 class="padding"><a href="https://github.com/skyfast/Lab7.1" target="_blank">Rock Papper Scissors</a></h3>
+          <p class="padding">Place holding</p>
+          <h3 class="padding"><a href="https://github.com/skyfast/162_lab_1" target="_blank">Tic-Tac-Toe</a></h3>
+          <p class="padding">Place holding</p>
+          <h3 class="padding"><a href="https://github.com/skyfast/162_lab_2" target="_blank">Dungeon Crawler</a></h3>
+          <p class="padding">Place holding</p>
+        </article>
+        <article>
+          <h2 class="center">Currently Working on</h2>
+          <h3><a href="https://hackforacause.org/" target="+_blank">Hack For a Cause</a></h3>
+          <p>Place holding</p>
+        </article>
+      </section>
+      <section class="info_box">
+        <article>
+          <h2 class="center">Additional Information</h2>
+          <h3 class="center"><a href="https://github.com/skyfast" target="_blank">Github</a></h3>
+          <h3 class="center"><a href="https://www.codingame.com/profile/02c253fc47c2caddce3d14f14162faa94774472" target="_blank">Coding Games</a></h3>
+          <h3 class="center"><a href="https://www.codewars.com/users/skyfast" target="_blank">Code Wars</a></h3>
+        </article>
+      </section>
   </div>
   <footer id="foot" class="footer">
       <p>Skylar Shapiro-Frost 2020&copy;</p>
