--- a/work.html
+++ b/work.html
@@ -50,19 +50,19 @@
                 <th>Possition</th>
               </tr>
               <tr>
-                <td>NewTek</td>
+                <td><a href="#newtek">NewTek</a></td>
                 <td>Technical Support rep</td>
               </tr>
               <tr>
-                <td>Godaddy</td>
+                <td><a href="#godaddy">Godaddy</a></td>
                 <td>Productivity Support</td>
               </tr>
               <tr>
-                <td>Endurance</td>
+                <td><a href="#endurance">Endurance</a></td>
                 <td>Web Hosting Support rep Tier 1 / 2</td>
               </tr>
               <tr>
-                <td>AT&T</td>
+                <td><a href="#att">AT&T</a></td>
                 <td>Technical Support rep</td>
               </tr>
             </table>
@@ -70,7 +70,7 @@
           <article class="center">
             <h2>More Info</h2>
 
-            <h3>NewTek</h3>
+            <h3 id="newtek">NewTek</h3>
             <ul class="list">
                 <li>Provided technical support for Linux and Windows based shared hosting platforms as well as support for dedicated and virtual private servers</li>
                 <li>Provided support for shared and dedicated email systems, as well as supporting basic email client configuration</li>
@@ -79,7 +79,7 @@
                 <li>Preform server administration tasks on shared and dedicated servers, and create clear and well documented internal tickets when issue required escalation</li>
             </ul>
 
-            <h3>GoDaddy</h3>
+            <h3 id="godaddy">GoDaddy</h3>
             <ul class="list">
                 <li>Technical support for Office 365 as well as in house email systems</li>
                 <li>Consult with customers regarding their short and long term online goals, and provide product solutions to meet those goals</li>
@@ -88,7 +88,7 @@
                 <li>Adhere to metrics for sales, availability, and customer satisfaction</li>
             </ul>
 
-            <h3>Endurance</h3>
+            <h3 id="endurance">Endurance</h3>
             <ul class="list">
                 <li>Technical support for shared hosting environment as well as VPS and dedicated support</li>
                 <li>Consulting with customers to help them grow their business online by advising customers on products we offer and up-selling services to best suit customer's needs</li>
@@ -97,7 +97,7 @@
                 <li>Worked in a tier 2 position which entailed management of a team of advanced technical support agents overseeing the migration of customers content from an outdated platform to our updated hosting platform</li>
             </ul>
 
-            <h3>AT&T</h3>
+            <h3 id="att">AT&T</h3>
             <ul class="list">
                 <li>Technical support for AT&T U-vers services including VoIP, Television, and internet services by support over the phone and dispatching technicians over a national system</li>
                 <li>Assist with billing inquires and account management, some times using a mirrored web service</li>
