--- a/about.html
+++ b/about.html
@@ -33,7 +33,7 @@
         <figure class="center">
           <img class="img_pfp"src="pictures/sky_1.jpg" alt="Picture of Skylar">
         </figure>
-        <p class="padding">My name is Skylar, I am 23 years old, and I am looking to pursue a career in software development, with the goal of one day working in the game industry. I am currently working on saving up to start going to school where I plan to get my CS degree. I am very enthusiastic about learning, especially when it come to coding. I am currently working on understanding web development by learning HTML and CSS.</p>
+        <p class="padding">My name is Skylar, I am 23 years old, and I am looking to pursue a career in software development, with the goal of one day working in the game industry. I am currently working towards getting my Associates degree at Lane Community Collage. I am very enthusiastic about learning, especially when it come to coding.  I am studying C++ and C# at school, well working on my HTML/CSS and JavaScript skill in my free time.</p>
       </section>
   </div>
   <footer id="foot" class="footer">
