Finished the first draft.

--- a/about.html
+++ b/about.html
@@ -31,14 +31,14 @@
       <section class="info_box">
         <h2 class="center">About me</h2>
         <figure class="center">
-          <img class="img_pfp"src="pictures/sky_1.jpg" alt="Picture of Skylar">
+          <img class="img_pfp" src="pictures/sky_1.jpg" alt="Picture of Skylar">
         </figure>
         <p class="padding">My name is Skylar, I am 23 years old, and I am looking to pursue a career in software development, with the goal of one day working in the game industry. I am currently working towards getting my Associates degree at Lane Community Collage. I am very enthusiastic about learning, especially when it come to coding.  I am studying C++ and C# at school, well working on my HTML/CSS and JavaScript skill in my free time.</p>
       </section>
   </div>
   <footer id="foot" class="footer">
       <p>Skylar Shapiro-Frost 2020&copy;</p>
-      <p>Last editied 2/17/2020</p>
+      <p>Last edited 2/25/2020</p>
   </footer>
 </body>
 </html>
