--- a/education.html
+++ b/education.html
@@ -32,15 +32,21 @@
         <article>
           <h2 class="center">My Education</h2>
           <figure class="center">
-            <img class="img_education"src="pictures/lcc.jpg" alt="Picture of Lane community college">
-            <figcaption>Lane Community College</figcaption>
+            <img class="img_education" src="pictures/lcc.jpg" alt="Picture of Lane community college">
           </figure>
+          <h3 class="center"><a href="https://www.lanecc.edu/" target="_blank">Lane Comunity Collage</a></h3>
+          <p class="center">I am currently attending Lane Community College to get my Associate Applied Science in computer programing. I am going to be graduation in the spring of 2021. </p>
         </article>
+        <article>
+          <h3 class="center"><a href="https://www.gilbertschools.net/mesquitehigh" target="_blank">Mesquite High</a></h3>
+          <p class="center">I graduated form Mesquite High School in 2013.</p>
+        </article>
+      </section>
   </div>
 
   <footer id="foot" class="footer">
       <p>Skylar Shapiro-Frost 2020&copy;</p>
-      <p>Last editied 2/17/2020</p>
+      <p>Last edited 2/25/2020</p>
   </footer>
 </body>
 </html>
