--- a/index.html
+++ b/index.html
@@ -31,10 +31,10 @@
       </nav>
       <div>
       <section class="info_box">
+        <h2 class="center">Welcome To My Site</h2>
         <article>
-          <h2 class="center">Welcome To My Site</h2>
           <figure class="center">
-            <img class="img_def"src="pictures/code.jpg" alt="Computer code">
+            <img class="img_def" src="pictures/code.jpg" alt="Computer code">
           </figure>
           <p class="padding ">My name is Skylar, I am 24 years old and located in Eugene OR. I am looking for work  as a software developer.</p>
           <p class="padding">Personal statment:"I am a friendly, loyal, and dedicated indivdual who has ambition to succed in any enviroment. I have extensive experince in customer service and tech support. I love to learn and am always up for a challenge. I get alog well with others, well working efficiently on my own."</p>
@@ -44,7 +44,7 @@
   </div>
   <footer id="foot" class="footer">
       <p>Skylar Shapiro-Frost 2020&copy;</p>
-      <p>Last editied 2/17/2020</p>
+      <p>Last edited 2/25/2020</p>
   </footer>
 </body>
 </html>
