--- a/proj.html
+++ b/proj.html
@@ -32,18 +32,18 @@
         <article>
           <h2 class="center">Projects</h2>
           <h3 class="padding"><a href="https://github.com/skyfast/Lab_9" target="_blank">File Reading</a></h3>
-          <p class="padding">Place holding</p>
-          <h3 class="padding"><a href="https://github.com/skyfast/Lab7.1" target="_blank">Rock Papper Scissors</a></h3>
-          <p class="padding">Place holding</p>
+          <p class="padding">This program will read input from a file, and based off the input, write a shape to the output file, based on the input.</p>
+          <h3 class="padding"><a href="https://github.com/skyfast/Lab7.1" target="_blank">Rock Paper Scissors</a></h3>
+          <p class="padding">This is a Rock Paper Scissors game that will run in the console. It will ask for your move, generate one for the computer and calculate the winner. Will keep playing until it is told to stop.</p>
           <h3 class="padding"><a href="https://github.com/skyfast/162_lab_1" target="_blank">Tic-Tac-Toe</a></h3>
-          <p class="padding">Place holding</p>
+          <p class="padding">This program is a Tic-Tac-Toe game in the console. Is a two player game. Game will print the board and ask for a move until the winner is declared. Then it will ask if you wish to keep playing.</p>
           <h3 class="padding"><a href="https://github.com/skyfast/162_lab_2" target="_blank">Dungeon Crawler</a></h3>
-          <p class="padding">Place holding</p>
+          <p class="padding">This program is a Dungeon Crawler game played in the console. It will randomly generate a map in which the player must move to get the treasure to win the game.</p>
         </article>
         <article>
           <h2 class="center">Currently Working on</h2>
-          <h3><a href="https://hackforacause.org/" target="+_blank">Hack For a Cause</a></h3>
-          <p>Place holding</p>
+          <h3 class="padding"><a href="https://hackforacause.org/" target="+_blank">Hack For a Cause</a></h3>
+          <p class="padding">I am going to participate in the 2020 Hack For a Cause. This is an event where people with software development skills come together and help local business with solutions to problems they may have. </p>
         </article>
       </section>
       <section class="info_box">
@@ -57,8 +57,7 @@
   </div>
   <footer id="foot" class="footer">
       <p>Skylar Shapiro-Frost 2020&copy;</p>
-      <p>Last editied 2/17/2020</p>
+      <p>Last edited 2/25/2020</p>
   </footer>
-</flex>
 </body>
 </html>
