--- a/work.html
+++ b/work.html
@@ -110,7 +110,7 @@
   </div>
   <footer id="foot" class="footer">
       <p>Skylar Shapiro-Frost 2020&copy;</p>
-      <p>Last editied 2/17/2020</p>
+      <p>Last edited 2/25/2020</p>
   </footer>
 </body>
 </html>
