--- a/education.html
+++ b/education.html
@@ -33,6 +33,7 @@
           <h2 class="center">My Education</h2>
           <figure class="center">
             <img class="img_education" src="pictures/lcc.jpg" alt="Picture of Lane community college">
+            <figcaption> LCC Campus </figcaption>
           </figure>
           <h3 class="center"><a href="https://www.lanecc.edu/" target="_blank">Lane Comunity Collage</a></h3>
           <p class="center">I am currently attending Lane Community College to get my Associate Applied Science in computer programing. I am going to be graduation in the spring of 2021. </p>
